--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "swr": "^0.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.0.5"
   }
 }
